--- a/source/index.html
+++ b/source/index.html
@@ -1,12 +1,148 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html class="page" lang="ru">
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Кэт энерджи</title>
   </head>
-  <body>
-
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/adaptive">HTML и CSS. Адаптивная вёрстка и автоматизация</a>».</p>
-
+  <body class="page__body">
+    <header class="page-header">
+      <div class="page-header__wrapper site-wrapper">
+        <a class="page-header__logo-link logo-link" href="#">
+          <img class="logo-link__logo-picture" src="img/logo-mobile.svg" width="33" height="38" alt="Кот - логотип интернет-магазина: Кэт энерджи.">
+          <img class="logo-link__logo-text" src="img/logo-text.svg" width="101" height="18" alt="Интернет магазин: Кэт энерджи.">
+        </a>
+        <nav class="page-navigation">
+          <button class="page-navigation__toggle" type="button">
+            <span class="visually-hidden">Открыть меню.</span>
+          </button>
+          <ul class="page-navigation__list site-list site-list--black">
+            <li class="site-list__item site-list__item--current">
+              <a class="site-list__link link-navigation" href="#">Главная</a>
+            </li>
+            <li class="site-list__item">
+              <a class="site-list__link link-navigation" href="catalog.html">Каталог продукции</a>
+            </li>
+            <li class="site-list__item">
+              <a class="site-list__link link-navigation" href="form.html">Подбор программы</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+    <main class="main-container">
+      <div class="main-container__wrapper site-wrapper">
+        <h1 class="visually-hidden">Интернет-магазин: Кэт энерджи.</h1>
+        <section class="promo">
+          <h2 class="promo__title promo__title--white">Функциональное питание для котов</h2>
+          <p class="promo__slogan promo__slogan--black">Занялся собой? Займись котом!</p>
+          <img class="promo__image" src="#" width="280" height="270" alt="Пример товара из каталога.">
+          <button class="promo__button button" type="button">Подобрать программу</button>
+        </section>
+        <section class="programs-container">
+          <h2 class="visually-hidden">Наши программы.</h2>
+          <article class="programs-container__program program program--slim">
+            <h3 class="program__title">Похудение</h3>
+            <p class="program__description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
+            <a class="program__link" href="#">Каталог SLIM</a>
+          </article>
+          <article class="programs-container__program program program--pro">
+            <h3 class="program__title">Набор массы</h3>
+            <p class="program__description">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
+            <a class="program__link" href="#">Каталог PRO</a>
+          </article>
+        </section>
+        <section class="about-us">
+          <h2 class="visually-hidden">Преимущества нашего функционального питания.</h2>
+          <p class="about-us__title">Как это работает</p>
+          <ul class="about-us__list advantages-list">
+            <li class="advantages-list__item advantages-list__item--benefit">Функциональное питание
+              содержит только полезные питательные вещества.</li>
+            <li class="advantages-list__item advantages-list__item--easier">Выпускается в виде порошка,
+              который нужно лишь залить кипятком и готово.</li>
+            <li class="advantages-list__item advantages-list__item--practical">Замените один-два приема
+              обычной еды на наше функциональное питание.</li>
+            <li class="advantages-list__item advantages-list__item--fast">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</li>
+          </ul>
+        </section>
+        <section class="work-examples">
+          <h2 class="visually-hidden">Пример прохождения нашей программы.</h2>
+          <p class="work-examples__title">Живой пример</p>
+          <p class="work-examples__text">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
+          <dl class="work-examples__list">
+            <div class="work-examples__item">
+              <dt class="work-examples__number">5 кг</dt>
+                <dd class="work-examples__description">снижение веса</dd>
+            </div>
+            <div class="work-examples__item">
+              <dt class="work-examples__number">60 дней</dt>
+                <dd class="work-examples__description">затрачено времени</dd>
+            </div>
+          </dl>
+          <p class="work-examples__total-sum">Затраты на питание: 15 000 руб.</p>
+          <div class="work-examples__slider slider">
+            <div class="slider__before">
+              <img class="slider__image-before" src="#" width="280" height="256" alt="Фото кота Бориса до прохождения программы.">
+              <button class="slider__button-before slider-button" type="button">
+                <span class="visually-hidden">Переместить кнопку вправо.</span>
+              </button>
+            </div>
+            <div class="slider__after">
+              <img class="slider__image-after" src="#" width="280" height="256" alt="Фото кота Бориса после прохождения программы.">
+              <button class="slider__button-after slider-button" type="button">
+                <span class="visually-hidden">Переместить кнопку влево.</span>
+              </button>
+            </div>
+          </div>
+        </section>
+      </div>
+    </main>
+    <footer class="page-footer">
+      <div class="page-footer__wrapper site-wrapper">
+        <section class="page-footer__cooperation cooperation">
+          <h2 class="visually-hidden">Сотрудничество.</h2>
+          <p class="cooperation__title">Приглашаем к сотрудничеству дилеров!</p>
+          <address class="cooperation__address">
+            <a class="cooperation__link" href="#" target="_blank">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</a>
+          </address>
+        </section>
+      </div>
+      <img class="page-footer__map map-adress" width="320" height="362" src="#" alt="Маркер на карте по адресу: ул. Большая Конюшенная, д. 19/8, Санкт-Петербург.">
+      <div class="site-wrapper">
+        <div class="page-footer__logo">
+          <a class="page-footer__logo-link logo-link" href="#">
+            <img class="logo-link__logo-text" src="img/logo-text.svg" width="128" height="24" alt="Интернет магазин: Кэт энерджи.">
+          </a>
+        </div>
+        <section class="page-footer__social social">
+          <h2 class="visually-hidden">Наши социальные сети.</h2>
+          <ul class="social__list">
+            <li class="social__item">
+              <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy" target="_blank">
+                <span class="visually-hidden">Мы в Вконтакте.</span>
+              </a>
+            </li>
+            <li class="social__item">
+              <a class="social__link social__link--youtube" href="https://www.youtube.com/user/htmlacademyru" target="_blank">
+                <span class="visually-hidden">Мы в Ютубе.</span>
+              </a>
+            </li>
+            <li class="social__item">
+              <a class="social__link social__link--telegram" href="https://t.me/htmlacademy" target="_blank">
+                <span class="visually-hidden">Мы в Телеграме.</span>
+              </a>
+            </li>
+          </ul>
+        </section>
+        <div class="page-footer__copyright copyright">
+          <a class="copyright__link-text" href="https://htmlacademy.ru/" target="_blank">
+            HTML Academy
+          </a>
+          <a class="copyright__link-logo" href="https://htmlacademy.ru/" target="_blank">
+            <svg class="copyright__link-image academy-logo" aria-hidden="true" focusable="false" width="27" height="34" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 60 60"><path fill="#2E368F" d="M30.2 5h-.2l-19.7 2.1v36.2l19.7 11.7 19.7-11.7v-36.2l-19.5-2.1zm17 36.8l-17.2 10.2-17.2-10.2v-14.8l17.1 10.2v1.8l-11.7-7v1.8l11.8 7.1v1.9l-11.8-7v1.8l11.8 7 11.9-7.1v-7.6l5.3-3.2v15.1zm-.1-17l-4.7 2.8-2.2 1.3-10.3-6.1v1.8l8.8 5.3h-.1l-.2.1-1.3.7-7.3-4.3v1.8l5.8 3.4-1.4.9-4.3-2.6v1.8l2.9 1.7-2.9 1.7-17-10.1 17-10.2 17.2 10zm.1-1.8l-17.3-10.2-17.1 10.2v-13.6l17.2-1.8 17.2 1.8v13.6z"/></svg>
+            <span class="visually-hidden">Логотип HTML Academy.</span>
+          </a>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
