Добавляет список для однородных элементов

--- a/source/index.html
+++ b/source/index.html
@@ -40,16 +40,22 @@
         </section>
         <section class="programs-container">
           <h2 class="visually-hidden">Наши программы.</h2>
-          <article class="programs-container__program program program--slim">
-            <h3 class="program__title">Похудение</h3>
-            <p class="program__description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
-            <a class="program__link" href="#">Каталог SLIM</a>
-          </article>
-          <article class="programs-container__program program program--pro">
-            <h3 class="program__title">Набор массы</h3>
-            <p class="program__description">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
-            <a class="program__link" href="#">Каталог PRO</a>
-          </article>
+          <ul class="programs-container__list program-list">
+            <li class="program-list__item">
+              <article class="programs-list__program program program--slim">
+                <h3 class="program__title">Похудение</h3>
+                <p class="program__description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
+                <a class="program__link" href="#">Каталог SLIM</a>
+              </article>
+            </li>
+            <li class="program-list__item">
+              <article class="programs-list__program program program--pro">
+                <h3 class="program__title">Набор массы</h3>
+                <p class="program__description">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
+                <a class="program__link" href="#">Каталог PRO</a>
+              </article>
+            </li>
+          </ul>
         </section>
         <section class="about-us">
           <h2 class="visually-hidden">Преимущества нашего функционального питания.</h2>
