Исправляет ошибки в списке определений и добавляет новый элемент

--- a/source/index.html
+++ b/source/index.html
@@ -76,15 +76,18 @@
           <p class="work-examples__text">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
           <dl class="work-examples__list">
             <div class="work-examples__item">
-              <dt class="work-examples__number">5 кг</dt>
-                <dd class="work-examples__description">снижение веса</dd>
+              <dt class="work-examples__number">снижение веса</dt>
+                <dd class="work-examples__description">5 кг</dd>
             </div>
             <div class="work-examples__item">
-              <dt class="work-examples__number">60 дней</dt>
-                <dd class="work-examples__description">затрачено времени</dd>
+              <dt class="work-examples__number">затрачено времени</dt>
+                <dd class="work-examples__description">60 дней</dd>
+            </div>
+            <div class="work-examples__item work-examples__item--total-sum">
+              <dt class="work-examples__number">Затраты на питание:</dt>
+                <dd class="work-examples__description">15 000 руб.</dd>
             </div>
           </dl>
-          <p class="work-examples__total-sum">Затраты на питание: 15 000 руб.</p>
           <div class="work-examples__slider slider">
             <div class="slider__before">
               <img class="slider__image-before" src="#" width="280" height="256" alt="Фото кота Бориса до прохождения программы.">
