Добавляет атрибут name textarea

--- a/source/form.html
+++ b/source/form.html
@@ -84,7 +84,7 @@
           <fieldset class="form-program__group form-group-comments">
             <legend class="form-group-comments__title">Комментарий</legend>
             <label class="visually-hidden" for="form-group-comments-field">Комментарий в свободной форме.</label>
-            <textarea class="form-group-comments__field" id="form-group-comments-field" placeholder="Расскажите обо всех повадках кота"></textarea>
+            <textarea class="form-group-comments__field" id="form-group-comments-field" name="comments" placeholder="Расскажите обо всех повадках кота"></textarea>
           </fieldset>
           <fieldset class="form-program__group form-group-additionally">
             <legend class="form-group-additionally__title">Дополнительно</legend>
