--- a/source/form.html
+++ b/source/form.html
@@ -108,7 +108,7 @@
             </ul>
           </fieldset>
           <div class="form-program-wrapper">
-            <button class="form-program__button button">Отправить заявку</button>
+            <button class="form-program__button button" type="submit">Отправить заявку</button>
             <p class="form-program__legend">* — Обязательные поля</p>
           </div>
         </form>
