Добавляет атрибут type кнопкам каталога

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -54,7 +54,7 @@
                   </div>
                 </dl>
               </div>
-              <button class="basic-products-list__button button">Заказать</button>
+              <button class="basic-products-list__button button" type="submit">Заказать</button>
             </li>
             <li class="basic-products-list__item basic-card">
               <img class="basic-products-list__image" src="#" width="140" height="107" alt="Cat Energy pro 1000 грамм со вкусом курицы.">
@@ -75,7 +75,7 @@
                   </div>
                 </dl>
               </div>
-              <button class="basic-products-list__button button">Заказать</button>
+              <button class="basic-products-list__button button" type="submit">Заказать</button>
             </li>
             <li class="basic-products-list__item basic-card">
               <img class="basic-products-list__image" src="#" width="140" height="107" alt="Cat Energy pro 500 грамм со вкусом рыбы.">
@@ -96,7 +96,7 @@
                   </div>
                 </dl>
               </div>
-              <button class="basic-products-list__button button">Заказать</button>
+              <button class="basic-products-list__button button" type="submit">Заказать</button>
             </li>
             <li class="basic-products-list__item basic-card">
               <img class="basic-products-list__image" src="#" width="140" height="107" alt="Cat Energy pro 1000 грамм со вкусом рыбы.">
@@ -117,7 +117,7 @@
                   </div>
                 </dl>
               </div>
-              <button class="basic-products-list__button button">Заказать</button>
+              <button class="basic-products-list__button button" type="submit">Заказать</button>
             </li>
             <li class="basic-products-list__item basic-card">
               <img class="basic-products-list__image" src="#" width="140" height="107" alt="Cat Energy slim 500 грамм со вкусом гречки.">
@@ -138,7 +138,7 @@
                   </div>
                 </dl>
               </div>
-              <button class="basic-products-list__button button">Заказать</button>
+              <button class="basic-products-list__button button" type="submit">Заказать</button>
             </li>
             <li class="basic-products-list__item basic-card">
               <img class="basic-products-list__image" src="#" width="140" height="107" alt="Cat Energy slim 1000 грамм со вкусом гречки.">
@@ -159,7 +159,7 @@
                   </div>
                 </dl>
               </div>
-              <button class="basic-products-list__button button">Заказать</button>
+              <button class="basic-products-list__button button" type="submit">Заказать</button>
             </li>
             <li class="basic-products-list__item basic-card">
               <img class="basic-products-list__image" src="#" width="140" height="107" alt="Cat Energy slim 500 грамм со вкусом риса.">
@@ -180,10 +180,10 @@
                   </div>
                 </dl>
               </div>
-              <button class="basic-products-list__button button">Заказать</button>
+              <button class="basic-products-list__button button" type="submit">Заказать</button>
             </li>
             <li class="basic-products-list__item basic-card basic-card--show-more">
-              <button class="basic-products-list__button button-icon">
+              <button class="basic-products-list__button button-icon" type="button">
                 <span class="visually-hidden">Показать еще.</span>
               </button>
               <p class="basic-products-list__text-big">Показать еще 100500 товаров</p>
@@ -204,7 +204,7 @@
                       <dd class="additional-products-list__meaning">200 ₽</dd>
                   </div>
                 </dl>
-                <button class="additional-products-list__button button">Заказать</button>
+                <button class="additional-products-list__button button" type="submit">Заказать</button>
               </li>
               <li class="additional-products-list__item additional-card">
                 <h3 class="additional-products-list__title title-additional-card">Питьевая вода</h3>
@@ -214,7 +214,7 @@
                       <dd class="additional-products-list__meaning">50 ₽</dd>
                   </div>
                 </dl>
-                <button class="additional-products-list__button button">Заказать</button>
+                <button class="additional-products-list__button button" type="submit">Заказать</button>
               </li>
               <li class="additional-products-list__item additional-card">
                 <h3 class="additional-products-list__title title-additional-card">Молоко</h3>
@@ -224,7 +224,7 @@
                       <dd class="additional-products-list__meaning">100 ₽</dd>
                   </div>
                 </dl>
-                <button class="additional-products-list__button button">Заказать</button>
+                <button class="additional-products-list__button button" type="submit">Заказать</button>
               </li>
               <li class="additional-products-list__item additional-card">
                 <h3 class="additional-products-list__title title-additional-card">Витамины</h3>
@@ -234,7 +234,7 @@
                       <dd class="additional-products-list__meaning">300 ₽</dd>
                   </div>
                 </dl>
-                <button class="additional-products-list__button button">Заказать</button>
+                <button class="additional-products-list__button button" type="submit">Заказать</button>
               </li>
             </ul>
             <div class="additional-products__container-action container-action">
