Исправляет позиционирование блока cooperation

--- a/source/form.html
+++ b/source/form.html
@@ -121,16 +121,18 @@
       </div>
     </main>
     <footer class="page-footer">
-      <section class="page-footer__cooperation cooperation cooperation--dark">
-        <div class="cooperation__wrapper site-wrapper">
-          <h2 class="visually-hidden">Сотрудничество.</h2>
-          <p class="cooperation__title">Приглашаем к сотрудничеству дилеров!</p>
-          <address class="cooperation__address">
-            <a class="cooperation__link" href="#" target="_blank">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</a>
-          </address>
-        </div>
-      </section>
-      <img class="page-footer__map map-adress" src="./img/map-adress.png" width="320" height="362" src="#" alt="Маркер на карте по адресу: ул. Большая Конюшенная, д. 19/8, Санкт-Петербург.">
+      <div class="page-footer__wrapper-cooperation">
+        <section class="page-footer__cooperation cooperation cooperation--dark">
+          <div class="cooperation__wrapper site-wrapper">
+            <h2 class="visually-hidden">Сотрудничество.</h2>
+            <p class="cooperation__title">Приглашаем к сотрудничеству дилеров!</p>
+            <address class="cooperation__address">
+              <a class="cooperation__link" href="#" target="_blank">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</a>
+            </address>
+          </div>
+        </section>
+        <img class="page-footer__map map-adress" src="./img/map-adress.png" width="320" height="362" src="#" alt="Маркер на карте по адресу: ул. Большая Конюшенная, д. 19/8, Санкт-Петербург.">
+      </div>
       <div class="page-footer__wrapper site-wrapper">
         <a class="page-footer__logo-link logo-link" href="index.html">
           <img class="logo-link__logo-text" src="img/logo-text.svg" width="128" height="24" alt="Интернет магазин: Кэт энерджи.">
