--- a/source/index.html
+++ b/source/index.html
@@ -115,18 +115,20 @@
       </section>
     </main>
     <footer class="page-footer">
-      <section class="page-footer__cooperation cooperation cooperation--light">
-        <div class="cooperation__wrapper site-wrapper">
-          <h2 class="visually-hidden">Сотрудничество.</h2>
-          <p class="cooperation__title">Приглашаем к сотрудничеству дилеров!</p>
-          <address class="cooperation__address">
-            <a class="cooperation__link" href="#" target="_blank">
-              <span class="cooperation__link-wrapper">ул. Большая Конюшенная, д. 19/8</span>
-              <span class="cooperation__link-wrapper">Санкт-Петербург</span></a>
-          </address>
-        </div>
-      </section>
-      <img class="page-footer__map map-adress" width="320" height="362" src="./img/map-adress.png" alt="Маркер на карте по адресу: ул. Большая Конюшенная, д. 19/8, Санкт-Петербург.">
+      <div class="page-footer__wrapper-cooperation">
+        <section class="page-footer__cooperation cooperation cooperation--light">
+          <div class="cooperation__wrapper site-wrapper">
+            <h2 class="visually-hidden">Сотрудничество.</h2>
+            <p class="cooperation__title">Приглашаем к сотрудничеству дилеров!</p>
+            <address class="cooperation__address">
+              <a class="cooperation__link" href="#" target="_blank">
+                <span class="cooperation__link-wrapper">ул. Большая Конюшенная, д. 19/8</span>
+                <span class="cooperation__link-wrapper">Санкт-Петербург</span></a>
+            </address>
+          </div>
+        </section>
+        <img class="page-footer__map map-adress" width="320" height="362" src="./img/map-adress.png" alt="Маркер на карте по адресу: ул. Большая Конюшенная, д. 19/8, Санкт-Петербург.">
+      </div>
       <div class="page-footer__wrapper site-wrapper">
         <a class="page-footer__logo-link logo-link" href="#">
           <img class="logo-link__logo-text logo-link__logo-text--footer" src="img/logo-text.svg" width="128" height="24" alt="Интернет магазин: Кэт энерджи.">
