--- a/source/form.html
+++ b/source/form.html
@@ -8,30 +8,30 @@
   </head>
   <body class="page__body">
     <header class="page-header">
-      <div class="page-header__wrapper site-wrapper">
+      <div class="page-header__wrapper">
         <a class="page-header__logo-link logo-link" href="index.html">
           <img class="logo-link__logo-picture logo-link__logo-picture--mobile" src="img/logo-mobile.svg" width="33" height="38" alt="Кот - логотип интернет-магазина: Кэт энерджи.">
           <img class="logo-link__logo-picture logo-link__logo-picture--tablet" src="img/logo-tablet.svg" width="60" height="50" alt="Кот - логотип интернет-магазина: Кэт энерджи.">
           <img class="logo-link__logo-picture logo-link__logo-picture--desktop" src="img/logo-desktop.svg" width="70" height="59" alt="Кот - логотип интернет-магазина: Кэт энерджи.">
           <img class="logo-link__logo-text" src="img/logo-text.svg" width="101" height="18" alt="Интернет магазин: Кэт энерджи.">
         </a>
-        <nav class="page-navigation">
-          <button class="page-navigation__toggle page-navigation__toggle--close" type="button">
-            <span class="visually-hidden">Открыть меню.</span>
-          </button>
-          <ul class="page-navigation__list page-navigation__list--close site-list">
-            <li class="site-list__item">
-              <a class="site-list__link link-navigation" href="index.html">Главная</a>
-            </li>
-            <li class="site-list__item">
-              <a class="site-list__link link-navigation" href="catalog.html">Каталог продукции</a>
-            </li>
-            <li class="site-list__item site-list__item--current">
-              <a class="site-list__link link-navigation" href="#">Подбор программы</a>
-            </li>
-          </ul>
-        </nav>
+        <button class="page-header__toggle-navigation page-header__toggle-navigation--nojs page-header__toggle-navigation--close" type="button">
+          <span class="visually-hidden">Открыть меню.</span>
+        </button>
       </div>
+      <nav class="page-navigation page-navigation--nojs page-navigation--close">
+        <ul class="page-navigation__list site-list">
+          <li class="site-list__item">
+            <a class="site-list__link link-navigation" href="index.html">Главная</a>
+          </li>
+          <li class="site-list__item">
+            <a class="site-list__link link-navigation" href="catalog.html">Каталог продукции</a>
+          </li>
+          <li class="site-list__item site-list__item--current">
+            <a class="site-list__link link-navigation" href="#">Подбор программы</a>
+          </li>
+        </ul>
+      </nav>
     </header>
     <main class="main-container">
       <div class="main-container__wrapper site-wrapper">
