--- a/source/index.html
+++ b/source/index.html
@@ -8,30 +8,30 @@
   </head>
   <body class="page__body">
     <header class="page-header page-header--index">
-      <div class="page-header__wrapper site-wrapper">
+      <div class="page-header__wrapper">
         <a class="page-header__logo-link logo-link" href="#">
           <img class="logo-link__logo-picture logo-link__logo-picture--mobile" src="img/logo-mobile.svg" width="33" height="38" alt="Кот - логотип интернет-магазина: Кэт энерджи.">
           <img class="logo-link__logo-picture logo-link__logo-picture--tablet" src="img/logo-tablet.svg" width="60" height="50" alt="Кот - логотип интернет-магазина: Кэт энерджи.">
           <img class="logo-link__logo-picture logo-link__logo-picture--desktop" src="img/logo-desktop.svg" width="70" height="59" alt="Кот - логотип интернет-магазина: Кэт энерджи.">
           <img class="logo-link__logo-text" src="img/logo-text.svg" width="101" height="18" alt="Интернет магазин: Кэт энерджи.">
         </a>
-        <nav class="page-navigation page-navigation--index">
-          <button class="page-navigation__toggle page-navigation__toggle--close" type="button">
-            <span class="visually-hidden">Открыть меню.</span>
-          </button>
-          <ul class="page-navigation__list page-navigation__list--close site-list">
-            <li class="site-list__item site-list__item--white site-list__item--current">
-              <a class="site-list__link link-navigation link-navigation--white" href="#">Главная</a>
-            </li>
-            <li class="site-list__item site-list__item--white">
-              <a class="site-list__link link-navigation link-navigation--white" href="catalog.html">Каталог продукции</a>
-            </li>
-            <li class="site-list__item site-list__item--white">
-              <a class="site-list__link link-navigation link-navigation--white" href="form.html">Подбор программы</a>
-            </li>
-          </ul>
-        </nav>
+        <button class="page-header__toggle-navigation page-header__toggle-navigation--nojs page-header__toggle-navigation--close" type="button">
+          <span class="visually-hidden">Открыть меню.</span>
+        </button>
       </div>
+      <nav class="page-navigation page-navigation--index page-navigation--nojs page-navigation--close">
+        <ul class="page-navigation__list site-list">
+          <li class="site-list__item site-list__item--white site-list__item--current">
+            <a class="site-list__link link-navigation link-navigation--white" href="#">Главная</a>
+          </li>
+          <li class="site-list__item site-list__item--white">
+            <a class="site-list__link link-navigation link-navigation--white" href="catalog.html">Каталог продукции</a>
+          </li>
+          <li class="site-list__item site-list__item--white">
+            <a class="site-list__link link-navigation link-navigation--white" href="form.html">Подбор программы</a>
+          </li>
+        </ul>
+      </nav>
     </header>
     <main class="main-container">
       <h1 class="visually-hidden">Интернет-магазин: Кэт энерджи.</h1>
@@ -68,7 +68,7 @@
         <div class="about-us__wrapper site-wrapper">
           <h2 class="visually-hidden">Преимущества нашего функционального питания.</h2>
           <p class="about-us__title">Как это работает</p>
-          <ul class="about-us__list advantages-list">
+          <ol class="about-us__list advantages-list">
             <li class="advantages-list__item advantages-list__item--benefit">Функциональное питание
               содержит только полезные питательные вещества.</li>
             <li class="advantages-list__item advantages-list__item--easier">Выпускается в виде порошка,
@@ -76,7 +76,7 @@
             <li class="advantages-list__item advantages-list__item--practical">Замените один-два приема
               обычной еды на наше функциональное питание.</li>
             <li class="advantages-list__item advantages-list__item--fast">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</li>
-          </ul>
+          </ol>
         </div>
       </section>
       <section class="main-container__work-examples work-examples">
