--- a/source/catalog.html
+++ b/source/catalog.html
@@ -4,15 +4,21 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Кэт энерджи: каталог продукции</title>
+    <link rel="icon" href="./favicon.ico">
+    <link rel="icon" href="./img/favicon/favicon.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="./img/favicon/apple-180.png">
+    <link rel="manifest" href="./manifest.webmanifest">
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body class="page__body">
     <header class="page-header">
       <div class="page-header__wrapper">
         <a class="page-header__logo-link logo-link" href="index.html">
-          <img class="logo-link__logo-picture logo-link__logo-picture--mobile" src="img/logo-mobile.svg" width="33" height="38" alt="Кот - логотип интернет-магазина: Кэт энерджи.">
-          <img class="logo-link__logo-picture logo-link__logo-picture--tablet" src="img/logo-tablet.svg" width="60" height="50" alt="Кот - логотип интернет-магазина: Кэт энерджи.">
-          <img class="logo-link__logo-picture logo-link__logo-picture--desktop" src="img/logo-desktop.svg" width="70" height="59" alt="Кот - логотип интернет-магазина: Кэт энерджи.">
+          <picture>
+            <source media="(min-width: 1440px)" srcset="img/logo-desktop.svg">
+            <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
+            <img class="logo-link__logo-picture" src="img/logo-mobile.svg" width="33" height="38" alt="Кот - логотип интернет-магазина: Кэт энерджи.">
+          </picture>
           <img class="logo-link__logo-text" src="img/logo-text.svg" width="101" height="18" alt="Интернет магазин: Кэт энерджи.">
         </a>
         <button class="page-header__toggle-navigation page-header__toggle-navigation--nojs page-header__toggle-navigation--close" type="button">
@@ -41,7 +47,13 @@
           <ul class="basic-products__list basic-products-list">
             <li class="basic-products-list__item">
               <article class="basic-products-list__container basic-card">
-                <img class="basic-card__image" src="./img/pro-chiсken-500.png" width="140" height="107" alt="Cat Energy pro 500 грамм со вкусом курицы.">
+                <div class="basic-card__image-container">
+                  <picture>
+                    <source media="(min-width: 1440px)" srcset="./img/cards/pro-chiсken-500-desktop.png 1x, ./img/cards/pro-chiсken-500-desktop@2x.png 2x">
+                    <source media="(min-width: 768px)" srcset="./img/cards/pro-chiсken-500-tablet.png 1x, ./img/cards/pro-chiсken-500-tablet@2x.png 2x">
+                    <img class="basic-card__image basic-card__image" src="./img/cards/pro-chiсken-500-mobile.png" srcset="./img/cards/pro-chiсken-500-mobile@2x.png 2x" width="140" height="107" alt="Cat Energy pro 500 грамм со вкусом курицы.">
+                  </picture>
+                </div>
                 <div class="basic-card__container-description">
                   <h3 class="basic-card__title">Cat Energy PRO 500 г</h3>
                   <dl class="basic-card__list">
@@ -64,7 +76,13 @@
             </li>
             <li class="basic-products-list__item">
               <article class="basic-products-list__container basic-card">
-                <img class="basic-card__image" src="./img/pro-chiсken-1000.png" width="140" height="107" alt="Cat Energy pro 1000 грамм со вкусом курицы.">
+                <div class="basic-card__image-container">
+                  <picture>
+                    <source media="(min-width: 1440px)" srcset="./img/cards/pro-chiсken-1000-desktop.png 1x, ./img/cards/pro-chiсken-1000-desktop@2x.png 2x">
+                    <source media="(min-width: 768px)" srcset="./img/cards/pro-chiсken-1000-tablet.png 1x, ./img/cards/pro-chiсken-1000-tablet@2x.png 2x">
+                    <img class="basic-card__image basic-card__image--big" src="./img/cards/pro-chiсken-1000-mobile.png" srcset="./img/cards/pro-chiсken-1000-mobile@2x.png 2x" width="140" height="107" alt="Cat Energy pro 1000 грамм со вкусом курицы.">
+                  </picture>
+                </div>
                 <div class="basic-card__container-description">
                   <h3 class="basic-card__title">Cat Energy PRO 1000 г</h3>
                   <dl class="basic-card__list">
@@ -87,7 +105,13 @@
             </li>
             <li class="basic-products-list__item">
               <article class="basic-products-list__container basic-card">
-                <img class="basic-card__image" src="./img/pro-fish-500.png" width="140" height="107" alt="Cat Energy pro 500 грамм со вкусом рыбы.">
+                <div class="basic-card__image-container">
+                  <picture>
+                    <source media="(min-width: 1440px)" srcset="./img/cards/pro-fish-500-desktop.png 1x, ./img/cards/pro-fish-500-desktop@2x.png 2x">
+                    <source media="(min-width: 768px)" srcset="./img/cards/pro-fish-500-tablet.png 1x, ./img/cards/pro-fish-500-tablet@2x.png 2x">
+                    <img class="basic-card__image" src="./img/cards/pro-fish-500-mobile.png" srcset="./img/cards/pro-fish-500-mobile@2x.png 2x" width="140" height="107" alt="Cat Energy pro 500 грамм со вкусом рыбы.">
+                  </picture>
+                </div>
                 <div class="basic-card__container-description">
                   <h3 class="basic-card__title">Cat Energy PRO 500 г</h3>
                   <dl class="basic-card__list">
@@ -110,7 +134,13 @@
             </li>
             <li class="basic-products-list__item">
               <article class="basic-products-list__container basic-card">
-                <img class="basic-card__image" src="./img/pro-fish-1000.png" width="140" height="107" alt="Cat Energy pro 1000 грамм со вкусом рыбы.">
+                <div class="basic-card__image-container">
+                  <picture>
+                    <source media="(min-width: 1440px)" srcset="./img/cards/pro-fish-1000-desktop.png 1x, ./img/cards/pro-fish-1000-desktop@2x.png 2x">
+                    <source media="(min-width: 768px)" srcset="./img/cards/pro-fish-1000-tablet.png 1x, ./img/cards/pro-fish-1000-tablet@2x.png 2x">
+                    <img class="basic-card__image basic-card__image--big" src="./img/cards/pro-fish-1000-mobile.png" srcset="./img/cards/pro-fish-1000-mobile@2x.png 2x" width="140" height="107" alt="Cat Energy pro 1000 грамм со вкусом рыбы.">
+                  </picture>
+                </div>
                 <div class="basic-card__container-description">
                   <h3 class="basic-card__title">Cat Energy PRO 1000 г</h3>
                   <dl class="basic-card__list">
@@ -133,7 +163,13 @@
             </li>
             <li class="basic-products-list__item">
               <article class="basic-products-list__container basic-card">
-                <img class="basic-card__image" src="./img/slim-buckwheat-500.png" width="140" height="107" alt="Cat Energy slim 500 грамм со вкусом гречки.">
+                <div class="basic-card__image-container">
+                  <picture>
+                    <source media="(min-width: 1440px)" srcset="./img/cards/slim-buckwheat-500-desktop.png 1x, ./img/cards/slim-buckwheat-500-desktop@2x.png 2x">
+                    <source media="(min-width: 768px)" srcset="./img/cards/slim-buckwheat-500-tablet.png 1x, ./img/cards/slim-buckwheat-500-tablet@2x.png 2x">
+                    <img class="basic-card__image" src="./img/cards/slim-buckwheat-500-mobile.png" srcset="./img/cards/slim-buckwheat-500-mobile@2x.png 2x" width="140" height="107" alt="Cat Energy slim 500 грамм со вкусом гречки.">
+                  </picture>
+                </div>
                 <div class="basic-card__container-description">
                   <h3 class="basic-card__title">Cat Energy SLIM 500 г</h3>
                   <dl class="basic-card__list">
@@ -156,7 +192,13 @@
             </li>
             <li class="basic-products-list__item">
               <article class="basic-products-list__container basic-card">
-                <img class="basic-card__image" src="./img/slim-buckwheat-1000.png" width="140" height="107" alt="Cat Energy slim 1000 грамм со вкусом гречки.">
+                <div class="basic-card__image-container">
+                  <picture>
+                    <source media="(min-width: 1440px)" srcset="./img/cards/slim-buckwheat-1000-desktop.png 1x, ./img/cards/slim-buckwheat-1000-desktop@2x.png 2x">
+                    <source media="(min-width: 768px)" srcset="./img/cards/slim-buckwheat-1000-tablet.png 1x, ./img/cards/slim-buckwheat-1000-tablet@2x.png 2x">
+                    <img class="basic-card__image basic-card__image--big" src="./img/cards/slim-buckwheat-1000-mobile.png" srcset="./img/cards/slim-buckwheat-1000-mobile@2x.png 2x" width="140" height="107" alt="Cat Energy slim 1000 грамм со вкусом гречки.">
+                  </picture>
+                </div>
                 <div class="basic-card__container-description">
                   <h3 class="basic-card__title">Cat Energy SLIM 1000 г</h3>
                   <dl class="basic-card__list">
@@ -179,7 +221,13 @@
             </li>
             <li class="basic-products-list__item">
               <article class="basic-products-list__container basic-card">
-                <img class="basic-card__image" src="./img/slim-rice-500.png" width="140" height="107" alt="Cat Energy slim 500 грамм со вкусом риса.">
+                <div class="basic-card__image-container">
+                  <picture>
+                    <source media="(min-width: 1440px)" srcset="./img/cards/slim-rice-500-desktop.png 1x, ./img/cards/slim-rice-500-desktop@2x.png 2x">
+                    <source media="(min-width: 768px)" srcset="./img/cards/slim-rice-500-tablet.png 1x, ./img/cards/slim-rice-500-tablet@2x.png 2x">
+                    <img class="basic-card__image" src="./img/cards/slim-rice-500-mobile.png" srcset="./img/cards/slim-rice-500-mobile@2x.png 2x" width="140" height="107" alt="Cat Energy slim 500 грамм со вкусом риса.">
+                  </picture>
+                </div>
                 <div class="basic-card__container-description">
                   <h3 class="basic-card__title">Cat Energy SLIM 500 г</h3>
                   <dl class="basic-card__list">
