--- a/source/form.html
+++ b/source/form.html
@@ -4,15 +4,21 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Кэт энерджи: подбор программы</title>
+    <link rel="icon" href="./favicon.ico">
+    <link rel="icon" href="./img/favicon/favicon.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="./img/favicon/apple-180.png">
+    <link rel="manifest" href="./manifest.webmanifest">
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body class="page__body">
     <header class="page-header">
       <div class="page-header__wrapper">
         <a class="page-header__logo-link logo-link" href="index.html">
-          <img class="logo-link__logo-picture logo-link__logo-picture--mobile" src="img/logo-mobile.svg" width="33" height="38" alt="Кот - логотип интернет-магазина: Кэт энерджи.">
-          <img class="logo-link__logo-picture logo-link__logo-picture--tablet" src="img/logo-tablet.svg" width="60" height="50" alt="Кот - логотип интернет-магазина: Кэт энерджи.">
-          <img class="logo-link__logo-picture logo-link__logo-picture--desktop" src="img/logo-desktop.svg" width="70" height="59" alt="Кот - логотип интернет-магазина: Кэт энерджи.">
+          <picture>
+            <source media="(min-width: 1440px)" srcset="img/logo-desktop.svg">
+            <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
+            <img class="logo-link__logo-picture" src="img/logo-mobile.svg" width="33" height="38" alt="Кот - логотип интернет-магазина: Кэт энерджи.">
+          </picture>
           <img class="logo-link__logo-text" src="img/logo-text.svg" width="101" height="18" alt="Интернет магазин: Кэт энерджи.">
         </a>
         <button class="page-header__toggle-navigation page-header__toggle-navigation--nojs page-header__toggle-navigation--close" type="button">
