--- a/source/index.html
+++ b/source/index.html
@@ -4,15 +4,21 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Кэт энерджи: главная страница</title>
+    <link rel="icon" href="./favicon.ico">
+    <link rel="icon" href="./img/favicon/favicon.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="./img/favicon/apple-180.png">
+    <link rel="manifest" href="./manifest.webmanifest">
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body class="page__body">
     <header class="page-header page-header--index">
       <div class="page-header__wrapper">
         <a class="page-header__logo-link logo-link" href="#">
-          <img class="logo-link__logo-picture logo-link__logo-picture--mobile" src="img/logo-mobile.svg" width="33" height="38" alt="Кот - логотип интернет-магазина: Кэт энерджи.">
-          <img class="logo-link__logo-picture logo-link__logo-picture--tablet" src="img/logo-tablet.svg" width="60" height="50" alt="Кот - логотип интернет-магазина: Кэт энерджи.">
-          <img class="logo-link__logo-picture logo-link__logo-picture--desktop" src="img/logo-desktop.svg" width="70" height="59" alt="Кот - логотип интернет-магазина: Кэт энерджи.">
+          <picture>
+            <source media="(min-width: 1440px)" srcset="img/logo-desktop.svg">
+            <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
+            <img class="logo-link__logo-picture" src="img/logo-mobile.svg" width="33" height="38" alt="Кот - логотип интернет-магазина: Кэт энерджи.">
+          </picture>
           <img class="logo-link__logo-text" src="img/logo-text.svg" width="101" height="18" alt="Интернет магазин: Кэт энерджи.">
         </a>
         <button class="page-header__toggle-navigation page-header__toggle-navigation--nojs page-header__toggle-navigation--close" type="button">
@@ -39,7 +45,11 @@
         <div class="promo__wrapper site-wrapper">
           <h2 class="promo__title promo__title--white">Функциональное питание для котов</h2>
           <p class="promo__slogan promo__slogan--white">Занялся собой? Займись котом!</p>
-          <img class="promo__image" src="./img/promo-image-mobile.png" width="280" height="270" alt="Пример товара из каталога.">
+          <picture>
+            <source media="(min-width: 1440px)" srcset="img/promo-image-desktop.png 1x, ./img/promo-image-desktop@2x.png 2x">
+            <source media="(min-width: 768px)" srcset="img/promo-image-tablet.png 1x, ./img/promo-image-tablet@2x.png 2x">
+            <img class="promo__image" src="./img/promo-image-mobile.png" srcset="./img/promo-image-mobile@2x.png 2x" width="280" height="270" alt="Пример товара из каталога.">
+          </picture>
           <a class="promo__button button" href="form.html">Подобрать программу</a>
         </div>
       </section>
@@ -106,12 +116,18 @@
           </div>
         </div>
         <div class="work-examples__slider slider">
-          <img class="slider__image slider__image--before" src="./img/slider-cat-before.png" width="280" height="256" alt="Фото кота Бориса до прохождения программы.">
+          <picture>
+            <source media="(min-width: 768px)" srcset="./img/slider-cat-before-tablet.png 1x, ./img/slider-cat-before-tablet@2x.png 2x">
+            <img class="slider__image slider__image--before" src="./img/slider-cat-before.png" srcset="./img/slider-cat-before@2x.png 2x" width="280" height="256" alt="Фото кота Бориса до прохождения программы.">
+          </picture>
           <button class="slider__button" type="button">
             <svg class="slider__button-icon" aria-hidden="true" focusable="false" width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg"><rect x="1" y="1" width="38" height="38" rx="19" fill="#fff"/><rect x="1" y="1" width="38" height="38" rx="19" stroke="#666" stroke-width="2"/><path d="m16 11-8 9 8 9V11ZM32 20l-8-9v18l8-9Z" fill="#666"/></svg>
             <span class="visually-hidden">Переместить кнопку влево или вправо.</span>
           </button>
-          <img class="slider__image slider__image--after" src="./img/slider-cat-after.png" width="280" height="256" alt="Фото кота Бориса после прохождения программы.">
+          <picture>
+            <source media="(min-width: 768px)" srcset="./img/slider-cat-after-tablet.png 1x, ./img/slider-cat-after-tablet@2x.png 2x">
+            <img class="slider__image slider__image--after" src="./img/slider-cat-after.png" srcset="./img/slider-cat-after@2x.png 2x" width="280" height="256" alt="Фото кота Бориса после прохождения программы.">
+          </picture>
         </div>
       </section>
     </main>
