Делает автоматизацию сборки проекта

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="./img/favicon/favicon.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="./img/favicon/apple-180.png">
     <link rel="manifest" href="./manifest.webmanifest">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.min.css">
   </head>
   <body class="page__body">
     <header class="page-header">
@@ -49,9 +49,9 @@
               <article class="basic-products-list__container basic-card">
                 <div class="basic-card__image-container">
                   <picture>
-                    <!-- <source type="image/webp" media="(min-width: 1440px)" srcset="./img/cards/pro-chiсken-500-desktop.webp 1x, ./img/cards/pro-chiсken-500-desktop@2x.webp 2x">
+                    <source type="image/webp" media="(min-width: 1440px)" srcset="./img/cards/pro-chiсken-500-desktop.webp 1x, ./img/cards/pro-chiсken-500-desktop@2x.webp 2x">
                     <source type="image/webp" media="(min-width: 768px)" srcset="./img/cards/pro-chiсken-500-tablet.webp 1x, ./img/cards/pro-chiсken-500-tablet@2x.webp 2x">
-                    <source type="image/webp" srcset="./img/cards/pro-chiсken-500-mobile.webp 1x, ./img/cards/pro-chiсken-500-mobile@2x.webp 2x"> -->
+                    <source type="image/webp" srcset="./img/cards/pro-chiсken-500-mobile.webp 1x, ./img/cards/pro-chiсken-500-mobile@2x.webp 2x">
                     <source media="(min-width: 1440px)" srcset="./img/cards/pro-chiсken-500-desktop.png 1x, ./img/cards/pro-chiсken-500-desktop@2x.png 2x">
                     <source media="(min-width: 768px)" srcset="./img/cards/pro-chiсken-500-tablet.png 1x, ./img/cards/pro-chiсken-500-tablet@2x.png 2x">
                     <img class="basic-card__image basic-card__image" src="./img/cards/pro-chiсken-500-mobile.png" srcset="./img/cards/pro-chiсken-500-mobile@2x.png 2x" width="140" height="107" alt="Cat Energy pro 500 грамм со вкусом курицы.">
@@ -81,9 +81,9 @@
               <article class="basic-products-list__container basic-card">
                 <div class="basic-card__image-container">
                   <picture>
-                    <!-- <source type="image/webp" media="(min-width: 1440px)" srcset="./img/cards/pro-chiсken-1000-desktop.webp 1x, ./img/cards/pro-chiсken-1000-desktop@2x.webp 2x">
+                    <source type="image/webp" media="(min-width: 1440px)" srcset="./img/cards/pro-chiсken-1000-desktop.webp 1x, ./img/cards/pro-chiсken-1000-desktop@2x.webp 2x">
                     <source type="image/webp" media="(min-width: 768px)" srcset="./img/cards/pro-chiсken-1000-tablet.webp 1x, ./img/cards/pro-chiсken-1000-tablet@2x.webp 2x">
-                    <source type="image/webp" srcset="./img/cards/pro-chiсken-1000-mobile.webp 1x, ./img/cards/pro-chiсken-1000-mobile@2x.webp 2x"> -->
+                    <source type="image/webp" srcset="./img/cards/pro-chiсken-1000-mobile.webp 1x, ./img/cards/pro-chiсken-1000-mobile@2x.webp 2x">
                     <source media="(min-width: 1440px)" srcset="./img/cards/pro-chiсken-1000-desktop.png 1x, ./img/cards/pro-chiсken-1000-desktop@2x.png 2x">
                     <source media="(min-width: 768px)" srcset="./img/cards/pro-chiсken-1000-tablet.png 1x, ./img/cards/pro-chiсken-1000-tablet@2x.png 2x">
                     <img class="basic-card__image basic-card__image--big" src="./img/cards/pro-chiсken-1000-mobile.png" srcset="./img/cards/pro-chiсken-1000-mobile@2x.png 2x" width="140" height="107" alt="Cat Energy pro 1000 грамм со вкусом курицы.">
@@ -113,9 +113,9 @@
               <article class="basic-products-list__container basic-card">
                 <div class="basic-card__image-container">
                   <picture>
-                    <!-- <source type="image/webp" media="(min-width: 1440px)" srcset="./img/cards/pro-fish-500-desktop.webp 1x, ./img/cards/pro-fish-500-desktop@2x.webp 2x">
+                    <source type="image/webp" media="(min-width: 1440px)" srcset="./img/cards/pro-fish-500-desktop.webp 1x, ./img/cards/pro-fish-500-desktop@2x.webp 2x">
                     <source type="image/webp" media="(min-width: 768px)" srcset="./img/cards/pro-fish-500-tablet.webp 1x, ./img/cards/pro-fish-500-tablet@2x.webp 2x">
-                    <source type="image/webp" srcset="./img/cards/pro-fish-500-mobile.webp 1x, ./img/cards/pro-fish-500-mobile@2x.webp 2x"> -->
+                    <source type="image/webp" srcset="./img/cards/pro-fish-500-mobile.webp 1x, ./img/cards/pro-fish-500-mobile@2x.webp 2x">
                     <source media="(min-width: 1440px)" srcset="./img/cards/pro-fish-500-desktop.png 1x, ./img/cards/pro-fish-500-desktop@2x.png 2x">
                     <source media="(min-width: 768px)" srcset="./img/cards/pro-fish-500-tablet.png 1x, ./img/cards/pro-fish-500-tablet@2x.png 2x">
                     <img class="basic-card__image" src="./img/cards/pro-fish-500-mobile.png" srcset="./img/cards/pro-fish-500-mobile@2x.png 2x" width="140" height="107" alt="Cat Energy pro 500 грамм со вкусом рыбы.">
@@ -145,9 +145,9 @@
               <article class="basic-products-list__container basic-card">
                 <div class="basic-card__image-container">
                   <picture>
-                    <!-- <source type="image/webp" media="(min-width: 1440px)" srcset="./img/cards/pro-fish-1000-desktop.webp 1x, ./img/cards/pro-fish-1000-desktop@2x.webp 2x">
+                    <source type="image/webp" media="(min-width: 1440px)" srcset="./img/cards/pro-fish-1000-desktop.webp 1x, ./img/cards/pro-fish-1000-desktop@2x.webp 2x">
                     <source type="image/webp" media="(min-width: 768px)" srcset="./img/cards/pro-fish-1000-tablet.webp 1x, ./img/cards/pro-fish-1000-tablet@2x.webp 2x">
-                    <source type="image/webp" srcset="./img/cards/pro-fish-1000-mobile.webp 1x, ./img/cards/pro-fish-1000-mobile@2x.webp 2x"> -->
+                    <source type="image/webp" srcset="./img/cards/pro-fish-1000-mobile.webp 1x, ./img/cards/pro-fish-1000-mobile@2x.webp 2x">
                     <source media="(min-width: 1440px)" srcset="./img/cards/pro-fish-1000-desktop.png 1x, ./img/cards/pro-fish-1000-desktop@2x.png 2x">
                     <source media="(min-width: 768px)" srcset="./img/cards/pro-fish-1000-tablet.png 1x, ./img/cards/pro-fish-1000-tablet@2x.png 2x">
                     <img class="basic-card__image basic-card__image--big" src="./img/cards/pro-fish-1000-mobile.png" srcset="./img/cards/pro-fish-1000-mobile@2x.png 2x" width="140" height="107" alt="Cat Energy pro 1000 грамм со вкусом рыбы.">
@@ -177,9 +177,9 @@
               <article class="basic-products-list__container basic-card">
                 <div class="basic-card__image-container">
                   <picture>
-                    <!-- <source type="image/webp" media="(min-width: 1440px)" srcset="./img/cards/slim-buckwheat-500-desktop.webp 1x, ./img/cards/slim-buckwheat-500-desktop@2x.webp 2x">
+                    <source type="image/webp" media="(min-width: 1440px)" srcset="./img/cards/slim-buckwheat-500-desktop.webp 1x, ./img/cards/slim-buckwheat-500-desktop@2x.webp 2x">
                     <source type="image/webp" media="(min-width: 768px)" srcset="./img/cards/slim-buckwheat-500-tablet.webp 1x, ./img/cards/slim-buckwheat-500-tablet@2x.webp 2x">
-                    <source type="image/webp" srcset="./img/cards/slim-buckwheat-500-mobile.webp 1x, ./img/cards/slim-buckwheat-500-mobile@2x.webp 2x"> -->
+                    <source type="image/webp" srcset="./img/cards/slim-buckwheat-500-mobile.webp 1x, ./img/cards/slim-buckwheat-500-mobile@2x.webp 2x">
                     <source media="(min-width: 1440px)" srcset="./img/cards/slim-buckwheat-500-desktop.png 1x, ./img/cards/slim-buckwheat-500-desktop@2x.png 2x">
                     <source media="(min-width: 768px)" srcset="./img/cards/slim-buckwheat-500-tablet.png 1x, ./img/cards/slim-buckwheat-500-tablet@2x.png 2x">
                     <img class="basic-card__image" src="./img/cards/slim-buckwheat-500-mobile.png" srcset="./img/cards/slim-buckwheat-500-mobile@2x.png 2x" width="140" height="107" alt="Cat Energy slim 500 грамм со вкусом гречки.">
@@ -209,9 +209,9 @@
               <article class="basic-products-list__container basic-card">
                 <div class="basic-card__image-container">
                   <picture>
-                    <!-- <source type="image/webp" media="(min-width: 1440px)" srcset="./img/cards/slim-buckwheat-1000-desktop.webp 1x, ./img/cards/slim-buckwheat-1000-desktop@2x.webp 2x">
+                    <source type="image/webp" media="(min-width: 1440px)" srcset="./img/cards/slim-buckwheat-1000-desktop.webp 1x, ./img/cards/slim-buckwheat-1000-desktop@2x.webp 2x">
                     <source type="image/webp" media="(min-width: 768px)" srcset="./img/cards/slim-buckwheat-1000-tablet.webp 1x, ./img/cards/slim-buckwheat-1000-tablet@2x.webp 2x">
-                    <source type="image/webp" srcset="./img/cards/slim-buckwheat-1000-mobile.webp 1x, ./img/cards/slim-buckwheat-1000-mobile@2x.webp 2x"> -->
+                    <source type="image/webp" srcset="./img/cards/slim-buckwheat-1000-mobile.webp 1x, ./img/cards/slim-buckwheat-1000-mobile@2x.webp 2x">
                     <source media="(min-width: 1440px)" srcset="./img/cards/slim-buckwheat-1000-desktop.png 1x, ./img/cards/slim-buckwheat-1000-desktop@2x.png 2x">
                     <source media="(min-width: 768px)" srcset="./img/cards/slim-buckwheat-1000-tablet.png 1x, ./img/cards/slim-buckwheat-1000-tablet@2x.png 2x">
                     <img class="basic-card__image basic-card__image--big" src="./img/cards/slim-buckwheat-1000-mobile.png" srcset="./img/cards/slim-buckwheat-1000-mobile@2x.png 2x" width="140" height="107" alt="Cat Energy slim 1000 грамм со вкусом гречки.">
@@ -241,9 +241,9 @@
               <article class="basic-products-list__container basic-card">
                 <div class="basic-card__image-container">
                   <picture>
-                    <!-- <source type="image/webp" media="(min-width: 1440px)" srcset="./img/cards/slim-rice-500-desktop.webp 1x, ./img/cards/slim-rice-500-desktop@2x.webp 2x">
+                    <source type="image/webp" media="(min-width: 1440px)" srcset="./img/cards/slim-rice-500-desktop.webp 1x, ./img/cards/slim-rice-500-desktop@2x.webp 2x">
                     <source type="image/webp" media="(min-width: 768px)" srcset="./img/cards/slim-rice-500-tablet.webp 1x, ./img/cards/slim-rice-500-tablet@2x.webp 2x">
-                    <source type="image/webp" srcset="./img/cards/slim-rice-500-mobile.webp 1x, ./img/cards/slim-rice-500-mobile@2x.webp 2x"> -->
+                    <source type="image/webp" srcset="./img/cards/slim-rice-500-mobile.webp 1x, ./img/cards/slim-rice-500-mobile@2x.webp 2x">
                     <source media="(min-width: 1440px)" srcset="./img/cards/slim-rice-500-desktop.png 1x, ./img/cards/slim-rice-500-desktop@2x.png 2x">
                     <source media="(min-width: 768px)" srcset="./img/cards/slim-rice-500-tablet.png 1x, ./img/cards/slim-rice-500-tablet@2x.png 2x">
                     <img class="basic-card__image" src="./img/cards/slim-rice-500-mobile.png" srcset="./img/cards/slim-rice-500-mobile@2x.png 2x" width="140" height="107" alt="Cat Energy slim 500 грамм со вкусом риса.">
