--- a/source/index.html
+++ b/source/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="./img/favicon/favicon.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="./img/favicon/apple-180.png">
     <link rel="manifest" href="./manifest.webmanifest">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.min.css">
   </head>
   <body class="page__body">
     <header class="page-header page-header--index">
@@ -46,9 +46,9 @@
           <h2 class="promo__title promo__title--white">Функциональное питание для котов</h2>
           <p class="promo__slogan promo__slogan--white">Занялся собой? Займись котом!</p>
           <picture>
-            <!-- <source type="image/webp" media="(min-width: 1440px)" srcset="./img/promo-image-desktop.webp 1x, ./img/promo-image-desktop@2x.webp 2x">
+            <source type="image/webp" media="(min-width: 1440px)" srcset="./img/promo-image-desktop.webp 1x, ./img/promo-image-desktop@2x.webp 2x">
             <source type="image/webp" media="(min-width: 768px)" srcset="./img/promo-image-tablet.webp 1x, ./img/promo-image-tablet@2x.webp 2x">
-            <source type="image/webp" srcset="./img/promo-image-mobile.webp 1x, ./img/promo-image-mobile@2x.webp 2x"> -->
+            <source type="image/webp" srcset="./img/promo-image-mobile.webp 1x, ./img/promo-image-mobile@2x.webp 2x">
             <source media="(min-width: 1440px)" srcset="img/promo-image-desktop.png 1x, ./img/promo-image-desktop@2x.png 2x">
             <source media="(min-width: 768px)" srcset="img/promo-image-tablet.png 1x, ./img/promo-image-tablet@2x.png 2x">
             <img class="promo__image" src="./img/promo-image-mobile.png" srcset="./img/promo-image-mobile@2x.png 2x" width="280" height="270" alt="Пример товара из каталога.">
