--- a/source/index.html
+++ b/source/index.html
@@ -9,6 +9,9 @@
     <link rel="apple-touch-icon" href="./img/favicon/apple-180.png">
     <link rel="manifest" href="./manifest.webmanifest">
     <link rel="stylesheet" href="css/style.min.css">
+    <link rel="preload" href="fonts/lato/Lato-Regular.woff2" as="font" crossorigin="anonymous">
+    <link rel="preload" href="fonts/oswald/oswaldmedium.woff2" as="font" crossorigin="anonymous">
+    <link rel="preload" href="fonts/oswald/oswaldregular.woff2" as="font" crossorigin="anonymous">
   </head>
   <body class="page__body">
     <header class="page-header page-header--index">
