Дорабатвает страницу формы

--- a/source/form.html
+++ b/source/form.html
@@ -104,7 +104,7 @@
               </li>
               <li class="form-list__item">
                 <label class="form-list__title" for="form-list-field-tel">Телефон:*</label>
-                <input class="form-list__field" type="tel" id="form-list-field-tel" name="tel" placeholder="8 (960) 900-60-90" required>
+                <input class="form-list__field" type="tel" id="form-list-field-tel" name="tel" placeholder="8 (960) 900-60-90" pattern="[0-9]{1} \([0-9]{3}\) [0-9]{3} [0-9]{2} [0-9]{2}" required>
                 <svg class="form-list__field-icon" aria-hidden="true" focusable="false" width="20" height="20">
                   <use href="./img/sprite.svg#form-list-field-icon-tel"></use>
                 </svg>
